<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- タイトルバー -->
    <string name="app_name">家計簿</string>
    <string name="action_new_data">新規登録</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">検索</string>
    <string name="action_change_calendar">*アイコン*</string>
    <string name="this_year">今年</string>
    <string name="this_month">今月</string>
    <string name="this_week">今週</string>
    <string name="user_set">入力</string>
    <string-array name="text_size_list">
        <item >大</item>
        <item>中</item>
        <item>小</item>
    </string-array>
    <string-array name="month_list">
        <item>全て</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    
    <string-array name="BOP">
        <item>支出</item>
        <item>収入</item>
    </string-array>
        
        <!-- handle画面 -->
    <string name="def_date">2012年1月1日</string>
    <string name="change_date">変更</string>
    <string name="data_category">カテゴリ</string>
    <string name="data_subCategory">サブカテゴリ</string>
    <string name="data_name">品名</string>
    <string name="data_price">値段</string>
    <string name="save">登録</string>
    <string name="back">back</string>
    <string name="hint_category">category name</string>
    <string name="hint_subCategory">subCategory name</string>
    
    <!-- Top画面 -->
    <string name="button_details">詳細</string>
    <string name="button_top">トップ</string>

  
    <!-- ChartView -->
    <string name="someStringResource">Chart</string>
    
    <!-- Animation  -->
    <string name="activity_animation_duration">200</string>
    
    <!-- サーチバー -->
    <string name="search_label">検索</string>
    <string name="search_hint">input search word</string>
    <string name="settings_description">kakeibo</string>
    
    
</resources>