<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id  ="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/this_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_year" />


        <RadioButton
            android:id="@+id/this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_month" />

        <RadioButton
            android:id="@+id/this_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_week" />

        <RadioButton
            android:id="@+id/user_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_set" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
             <Spinner
                 android:id="@+id/calendar_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="年"/>
            <Spinner
                 android:id="@+id/calendar_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:entries="@array/month_list"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false" 
                android:text="月"/>
        </LinearLayout>
    </RadioGroup>
</LinearLayout>